New changes for todays work

--- a/code/index.html
+++ b/code/index.html
@@ -12,8 +12,15 @@
 </head>
 <body>
     <header>
-        <img src="/images/fox.png" width="80px" alt="" class="logga">
-        <div class="meny"><img src="/images/bars-solid.svg" width="40px" alt=""></div>
+        <img src="/images/fox.png" width="50px" alt="" class="logga">
+        <div class="meny"><button><img src="/images/bars-solid.svg" width="30px" alt=""></button>
+            <ul>
+                <a href="#"><li>Popular</li></a>
+                <a href="#"><li>Latest news</li></a>
+                <a href="#"><li>Animals</li></a>
+                <a href="#"><li>Donations</li></a>
+            </ul></div>
+        
         <nav>
             <a href=""><p>POPULAR</p></a>
             <a href=""><p>LATEST NEWS</p></a>
@@ -35,27 +42,35 @@
     <div class="cards">
         <div class="card1">
             <img src="/images/fox.png" width="150px" alt="">
+            <p>Foxes are omnivorous mammals that are light on their feet. They are often mistaken for other members of the Canidae family, which include jackals, wolves and dogs. They stand out from their relatives because of their long, thin legs, lithe frame, pointed nose and bushy tail. <br><br><a href=""><b>Click to read more</b></a></p>
         </div>
         <div class="card2">
             <img src="/images/cow.png" width="150px" alt="">
+            <p>Cows can see almost 360 degrees. As a result of this near-panoramic view, they can watch for predators from all angles. However, they don’t see well straight in front of them and they will typically turn their head to look at you. <br><br><a href=""><b>Click to read more</b></a></p>
         </div>
         <div class="card3">
             <img src="/images/coala.png" width="150px" alt="">
+            <p>Koalas are well-known for their large round head, big furry ears and big black nose. Their fur is usually grey-brown in colour with white fur on the chest, inner arms, ears and bottom. They have no fur on their nose or the palms of their paws. Koalas have particularly hard bottoms, which is similar to their closest relative, the wombat. <br><br><a href=""><b>Click to read more</b></a></p>
         </div>
         <div class="card4">
-            <img src="/images/pig.png" width="150px" alt="">
+            <img src="/images/lion.png" width="150px" alt="">
+            <p>Living in the grasslands, scrub, and open woodlands of sub-Saharan Africa, the lion is the second largest cat in the world. It is dwarfed slightly by the tiger, which is closely related and has a very similar body type. <br><br><a href=""><b>Click to read more</b></a></p>
         </div>
         <div class="card5">
             <img src="/images/tigers.png" width="150px" alt="">
+            <p>Easily recognized by its coat of reddish-orange with dark stripes, the tiger is the largest wild cat in the world. The big cat's tail is three feet long. On average the big cat weighs 450 pounds, about the same as eight ten-year-old kids. It stands three feet tall with teeth four inches long and claws as long as house keys.<br><br><a href=""><b>Click to read more</b></a></p>
         </div>
         <div class="card6">
             <img src="/images/bear.png" width="150px" alt="">
+            <p>Bears are mammals that belong to the family Ursidae. They can be as small as four feet long and about 60 pounds (the sun bear) to as big as eight feet long and more than a thousand pounds (the polar bear). They’re found throughout North America, South America, Europe, and Asia. <br><br><a href=""><b>Click to read more</b></a></p>
         </div>
         <div class="card7">
             <img src="/images/lama.png" width="150px" alt="">
+            <p>Adorable, docile and soft, alpacas are prized as pets and cattle around the world. There are no wild alpacas. Alpacas are domesticated versions of vicuñas, South American ruminants that live high in the Andes. Alpacas are related to llamas, which are domesticated versions of another wild Andean ruminant, the guanaco. <br><br><a href=""><b>Click to read more</b></a></p>
         </div>
         <div class="card8">
-            <img src="/images/lion.png" width="150px" alt="">
+            <img src="/images/pig.png" width="150px" alt="">
+            <p>Fully grown, pigs can grow to between 300 and 700 pounds (140 and 300 kilograms), and sometimes much more. Pigs have poor eyesight, but a great sense of smell. The pig's nostrils are on its leathery snout, which is very sensitive to touch. The pig uses the snout to search, or root, for food.<br><br><a href=""><b>Click to read more</b></a></p>
         </div>
 
 
@@ -63,9 +78,10 @@
     </section>
 
     <footer>
-        <a href=""><img src="/images/facebook-square-brands.svg" width="40px" alt=""></a>
-        <a href=""><img src="/images/twitter-square-brands.svg" width="40px" alt=""></a>
-        <a href=""><img src="/images/linkedin-brands.svg" width="40px" alt=""></a>
+        <a href=""><img src="/images/facebook-brands.svg" width="40px" alt=""></a>
+        <a href=""><img src="/images/instagram-brands.svg" width="40px" alt=""></a>
+        <a href=""><img src="/images/twitter-brands.svg" width="40px" alt=""></a>
+        <a href=""><img src="/images/envelope-regular.svg" width="40px" alt=""></a>
   
       </footer>
 </body>
