Removed list from navbar

--- a/code/index.html
+++ b/code/index.html
@@ -10,23 +10,22 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
-      <nav>
-        <ul class="link">
-          <li><a href="https://google.com">Home</a></li>
-          <li><a href="https://google.com">Food</a></li>
-          <li><a href="https://google.com">Health</a></li>
-          <li><a href="https://google.com">Travel</a></li>
-          <li><a href="https://google.com">Sign up</a></li>
-        </ul>
+      <div class="logo-container">
+        <!-- <img src="https://i.pinimg.com/originals/6e/de/a8/6edea84dffc69d2c190c427be484143c.png" alt="raspberry-logo">
+      </div> -->
+      <nav class="nav-links">
+        <a href="https://google.com">Home</a>
+        <a href="https://facebook.com">Share</a>
+        <a href="https://google.com">Login</a>
       </nav>
     </header>
 
     <section class="container-big-news">
       <!-- The big news content -->
-      <div class="headline">
+      <div class="headline-article">
+        <img src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20banner.png" alt="raspberry">
         <h1>This is a big deal of newsy stuff!</h1>
         <p>Here is a bit of article text. Blah blah blah.</p>
-        <img src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20banner.png" alt="raspberry">
       </div>
     </section>
 
