added more articles

--- a/code/index.html
+++ b/code/index.html
@@ -26,7 +26,7 @@
 
     <section class="big-news">
       <a href="#">
-        <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\nubelson-fernandes-LLo02Cg2Q3A-unsplash.jpg"
+        <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\freddie-marriage-vSchPA-YA_A-unsplash.jpg"
         alt="home-office">
         <h2>How to create the perfect home office</h2>
         <p1>Just about anyone can benefit from having a functional workspace to tackle their to-do list, make headway on a creative project, 
@@ -40,20 +40,43 @@
         <a href="#">
           <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\tania-miron-umYxSxMncT4-unsplash.jpg"
           alt="plants">
-          <h5>The most important accessories for this spring</h5>
+          <h5>Plants are it</h5>
         </a>
       </article>
       <article>
         <a href="#">
           <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\bilal-mansuri-bCZkj7jEDBk-unsplash.jpg"
-          alt="plants">
+          alt="bathtub">
           <h5>Get inspired by these bathtub spots</h5>
         </a>
       </article>
-      <article></article>
-      <article></article>
-      <article></article>
-      <article></article>
+      <article>
+        <a href="#">
+          <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\jessica-sosey-YABErdnJPGc-unsplash.jpg"
+          alt="kitchen">
+          <h5>Rustic kitchen, of course</h5>
+        </a>
+      </article>
+      <article>
+        <a href="#">
+          <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\sarah-khan-8MJqNBSymRE-unsplash.jpg"
+          alt="black-and-white">
+          <h5>Trending color palettes</h5>
+        </a>
+      </article>
+      <article>
+        <a href="#">
+          <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\emine-dermenci-MAt6QxHEXeQ-unsplash.jpg"
+          alt="view">
+        <h5>A cabin with a view</h5>
+        </a>
+      </article>
+      <article>
+      <a href="#">
+        <img src="C:\Kodning\Technigo-projects\Week-2\project-news-site\code\images\francesco-la-corte-lICAVYUOBSw-unsplash.jpg"
+        alt="hotel">
+        <h5>5 appealing hotels to add to your list</h5>
+    </article>
     </section>
     
     <footer>
