Changed headline with image and text

--- a/code/index.html
+++ b/code/index.html
@@ -23,9 +23,9 @@
     <section class="container-big-news">
       <!-- The big news content -->
       <div class="headline-article">
-        <img src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20banner.png" alt="raspberry">
-        <h1>This is a big deal of newsy stuff!</h1>
-        <p>Here is a bit of article text. Blah blah blah.</p>
+        <img class="headline-image" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png" alt="raspberry">
+        <h1 class="headline">This is a big deal of newsy stuff!</h1>
+        <p class="headline-text">Here is a bit of article text. Blah blah blah.</p>
       </div>
     </section>
 
