added HTML-structure and an image folder with images

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,70 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <title>Your Life Science News</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <img class="logo" src="https://img.icons8.com/ios/50/000000/dna-helix.png" alt="DNA-Helix" />
+      <h1>World of LifeScience</h1>
+      <nav>
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </nav>
     </header>
 
+<!-- The big news content -->
     <section class="big-news">
-      <!-- The big news content -->
+      <div>
+        <img src="img/mainnews.jpg" alt="Image of cancercells" >
+      </div>
+      <div>
+        <h1>Cancercells in several different tissues can be diagnosted with AI</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi sequi ab fuga autem numquam vitae atque porro culpa sint dolore natus, accusantium molestias quia sapiente quis distinctio aspernatur unde magnam.</p>
+      </div> 
     </section>
 
-    <section class="">
-      <!-- The other news  -->
+    <!-- The other news  -->
+    <section class="other-news">
+      <div class="news-one">
+        <h2>Sweden BIOAward 2022</h2>
+        <img src="img/firework.jpg" alt="Image of ireworks" >
+      </div>
+
+      <div class="news-two">
+        <h2>Copenhagen - new center for stemcells resarch</h2>
+        <img src="img/cellculture.jpg" alt="Image of cultured cells" >
+      </div>
+
+      <div class="news-three">
+        <h2>3D printing cells</h2>
+        <img src="img/3Dprintedcells.jpg" alt="Imagde of 3D printed cells">
+      </div>
+
+      <div class="news-four">
+        <h2>Hepatic cells cultured on microchips</h2>
+        <img src="img/cells.jpg" alt="Image of cells">
+      </div>
+
+      <div class="news-five">
+        <h2> Transplantation - Three new methods</h2>
+        <img src="img/transplantation.jpg" alt="Image of a heart">
+      </div>
+
+      <div class="news-six">
+        <h2>Collaborations for new cancer treatments</h2>
+        <img src="img/medicinebottles.jpg" alt="Image of medicine bottles">
+      </div>
     </section>
+    <footer>
+      <a href="https://icons8.com/icon/846/dna-helix">DNA Helix icon by Icons8</a>
+    </footer>
   </body>
 </html>
