first draft, nothing is right

--- a/code/index.html
+++ b/code/index.html
@@ -3,20 +3,68 @@
   <head>
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Righteous&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
+
+
   <body>
+
+
     <header>
+      <div class="logo"><p class="logo-text">we<br>love<br>space</p></div>
+      <h1 class="head-site">DAILY SPACE - Kids Edition</h1>
+      <!-- <h2 class="head-site">Kids Edition</h2> -->
+      <nav class="nav-bar">
+        <a href="https://www.nasa.gov/" target="_blank">NASA</a>
+        <a href="https://www.nasa.gov/nasalive" target="_blank">NASA Live</a>
+        <a href="https://www.nasa.gov/kidsclub/index.html" target="_blank">NASA Kids Club</a>
+      </nav>
       <!-- Some kind of logo and navbar -->
     </header>
 
-    <section class="big-news">
+
+    <section class="big-news-container">
+      <div class="title-text">We live in<br> a Galaxy</div>
+       <img class="big-image" src="images/universe.jpg" alt= picture of a galaxy/>
       <!-- The big news content -->
     </section>
 
-    <section class="">
+
+    <section class="small-news-container">
+      <div class="news1">
+        <img class="small-img" src="images/universe.jpg"/>
+         <span>What is a shooting star</span>
+      </div>
+      <div class="news2">
+        <a href="https://www.highlightskids.com/explore/science-questions/what-are-the-northern-lights" target="_blank"><img class="small-img" src="images/northern-lights.jpg"/></a>
+         <span>What is a shooting star</span>
+      </div>
+      <div class="news3">
+        <img class="small-img" src="images/shooting-star.jpg"/>
+         <span>What is a shooting star</span>
+      </div> 
+    </section>
+
+    <section class="small-news-container">
+      <div class="news4">
+        <span>What is a shooting star</span>
+      </div>
+      <div class="news5">
+        <span>What is a shooting star</span>
+      </div>
+      <div class="news6">
+        <span>What is a shooting star</span>
+      </div>
       <!-- The other news  -->
     </section>
   </body>
+
+
 </html>
