--- a/code/index.html
+++ b/code/index.html
@@ -2,20 +2,36 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
     <header>
+     <h1>title</h1>
+     <image class="logo-img" src= "images/logo-travel.jpg"></image>
+     <nav>
+       <a href=""
+     </nav>
+     
       <!-- Some kind of logo and navbar -->
+    
     </header>
 
     <section class="big-news">
+      <image class="hot-air-balloons" src="images/tony-lee-i-unsplash.jpg"></image>
       <!-- The big news content -->
     </section>
 
-    <section class="">
+    <section class="small-news">
+
+      <div class="news-1"></div>
+      <div class="news-2"></div>
+      <div class="news-3"></div>
+      <div class="news-4"></div>
+
+
       <!-- The other news  -->
     </section>
   </body>
