--- a/code/index.html
+++ b/code/index.html
@@ -18,9 +18,10 @@
       <div class="main-header">
         <div class="main-header--logo">
           <img class="logo" src="./logo-nd.svg" alt="logo neighbour daily"/>
-          <h1><span>neighbour</span> daily</h1>
+          <h1><span>neighbour</span> news</h1>
         </div>
-        <div class="nav-hamburger"><i class="fas fa-bars fa-1x"></i></div>
+        <div class="nav-hamburger"><i class="fas fa-bars fa-1x"></i>
+        </div>
       </div>
       <nav class="sub-header">
         <ul class="sub-header--navbar">
@@ -48,47 +49,38 @@
       <section class="news-feed">
         <!-- The other news content -->
         <div class="news-feed--card">
-          <div class="news-feed--btn">
             <img class="news-feed--img" src="./images/cat.jpg" alt="cat with green background"/>
             <span class="date-item">20 JAN, 2022</span>
             <h3>Nisse is missing</h3>
             <p>Nisse hasn´t been seen since Sunday, which is very unlike him. Let Barbro know if you see Nisse. </p>
-          </div>
         </div>
 
         <div class="news-feed--card">
-          <div class="news-feed--btn">
             <img class="news-feed--img" src="./images/car.jpg" alt="old car"/>
             <span class="date-item">20 JAN, 2022</span>
             <h3>Tips to reduce environmental impact</h3>
             <p>Anonymous neighbours wonder if Sören really needed to use his car so often? We must think of the environment and our generations to come.</p>
-          </div>
         </div>
 
         <div class="news-feed--card">
-          <div class="news-feed--btn">
             <img class="news-feed--img" src="./images/crossword.jpg" alt="crosswords"/>
             <span class="date-item">19 JAN, 2022</span>
             <h3>Congratulations Hildur!</h3>
             <p>Hildur won last weeks cross word competition.</p>
-          </div>
         </div>
 
         <div class="news-feed--card">
-          <div class="news-feed--btn">
             <img class="news-feed--img" src="./images/knitting.jpg" alt="knitting"/>
             <span class="date-item">18 JAN, 2022</span>
             <h3>NAP event - knitting</h3>
             <p>National Association of Pensioners (NAP) is having their monthly knitting gathering next week. Call Ali on 3rd floor or Gun on 2nd floor if you want to join.</p>
-          </div>
         </div>
-
       </section>
     </main>
 
     <footer>
       <div class="footer-items">
-        <a href="https://github.com/emmahogberg88"><i class="fab fa-github"></i></a>
+        <a href="https://github.com/emmahogberg88"> <i class="fab fa-github"></i></a>
         <a href="https://www.linkedin.com/in/emmahogberg/"><i class="fab fa-linkedin-in"></i></a>
         <a href="https://twitter.com/Emm4_dev"><i class="fab fa-twitter"></i></a>
       </div>
