cleared up main html structure and almost finished tablet version

--- a/code/index.html
+++ b/code/index.html
@@ -14,19 +14,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Cormorant:ital,wght@0,300;1,500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=Cormorant:ital,wght@0,300;1,500&display=swap" rel="stylesheet">
   </head>
-  <body>
+<body>
+
     <header class="navbar">
     <div class="logo">
      <img src="logo.png" alt="logo">
     </div>
     <div class="Name">
     <h2>Poodle Variety</h2>  
-    </div>
-    
-    </header>
+      </div>
+</header>
+
+<main>
 
 <section class="big-news">
 
@@ -62,7 +64,33 @@
   <h5>According to source close to the band</h5>
 </div>
 
- </section>
+<div class="news-box">
+  <img src="jakob-samuel.jpeg" alt="not a poodle">
+  <h4>Lead singer of The Poodles NOT a poodle</h4>
+  <h5>According to source close to the band</h5>
+</div>
+
+<div class="news-box">
+  <img src="jakob-samuel.jpeg" alt="not a poodle">
+  <h4>Lead singer of The Poodles NOT a poodle</h4>
+  <h5>According to source close to the band</h5>
+</div>
+
+<div class="news-box">
+  <img src="jakob-samuel.jpeg" alt="not a poodle">
+  <h4>Lead singer of The Poodles NOT a poodle</h4>
+  <h5>According to source close to the band</h5>
+</div>
+
+<div class="news-box">
+  <img src="jakob-samuel.jpeg" alt="not a poodle">
+  <h4>Lead singer of The Poodles NOT a poodle</h4>
+  <h5>According to source close to the band</h5>
+</div>
+
+</section>
+
+</main>
 
   </body>
 </html>
