--- a/code/index.html
+++ b/code/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap');
+    </style>
   <head>
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
@@ -7,15 +10,47 @@
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
+
     <header>
       <!-- Some kind of logo and navbar -->
+      <div class="flex-container">
+      <div class="flex-container-item"><img src="Images\wine-glass.png" class="logo" alt="Fooderz-logo">
+      <h1>Foodies</h1></div>
+
+        <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about">About</a></li>
+      </ul>
+    </div>
     </header>
 
+    <!-- The big news content -->
     <section class="big-news">
-      <!-- The big news content -->
+    <div class="big_article"><img src="Images\wine.jpg" class="big_photo">
+     <div class="text"> <div class="h1">Top 100 wine you have to drink before you die!</h1></div><div class="h2">The experts have spoken! Thanks to the optimal conditions 
+       last year was great for wineproducers. But which ones should you drink now and which ones should you put in your winecellar and forget 
+      about for ten years? And what should you drink to that delicious fish? Our experts have the complete list and all the answers. </h2></div><div></div>
+    </div>
+    
+
     </section>
 
-    <section class="">
+    <section class="articles">
+      <div class="content"><img src="Images\pasta.jpg" class="article_photo"> <div class="h3">Looking for pasta?</div><div class="h2_">Pasta for dinner tonight?
+        Who can resist a good bolognese or carbonare? Well, I can't! Look through our recipes and see what you can find.
+      </div></div>
+      <div class="content"><img src="Images\coffee.jpg" class="article_photo"> <div class="h3">Is coffee healthy?</div><div class="h2_">Some love it and 
+        some despise it. Whatever you think about the taste of the black gold it does have some health benefits! Read more about it.</div>
+      </div>
+      <div class="content"><img src="Images\vegetables.jpg" class="article_photo"> <div class="h3">New year - new me?</div><div class="h2_">A new year has begun
+        and for many of us that comes with new promises of a healthy lifestyle. But how long will it last? Read here about sustainable changes!</div>
+      </div>
+      <div class="content"><img src="Images\asian-food.jpg" class="article_photo"> <div class="h3">We are traveling to Japan!</div><div class="h2_">Sushi 
+        has become a huge hit in the west. But doesn't Japan have more to offer then raw fish? We traveled to Japan to learn more about their delicious food!</div><div>
+      </div>
+
       <!-- The other news  -->
     </section>
   </body>
