--- a/code/index.html
+++ b/code/index.html
@@ -9,10 +9,10 @@
   </head>
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
+      <!-- Some kind of logo and navbar KOLLA OM BILDEN SKA VARA EN BILD OCH EJ EN LÄNK -->
       <img class="logo" src="https://img.icons8.com/ios/50/000000/dna-helix.png" alt="DNA-Helix" />
       <h1>World of LifeScience</h1>
-      <nav>
+      <nav class="navbar">
         <ul>
           <li><a href="#">About</a></li>
           <li><a href="#">Home</a></li>
@@ -24,9 +24,9 @@
 <!-- The big news content -->
     <section class="big-news">
       <div>
-        <img src="img/mainnews.jpg" alt="Image of cancercells" >
+        <img class= "main-image" src="img/mainnews.jpg" alt="Image of cancercells" >
       </div>
-      <div>
+      <div class="main-text">
         <h1>Cancercells in several different tissues can be diagnosted with AI</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi sequi ab fuga autem numquam vitae atque porro culpa sint dolore natus, accusantium molestias quia sapiente quis distinctio aspernatur unde magnam.</p>
       </div> 
