In line border on articles

--- a/code/index.html
+++ b/code/index.html
@@ -10,13 +10,14 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
-      <div class="logo-container">
-        <!-- <img src="https://i.pinimg.com/originals/6e/de/a8/6edea84dffc69d2c190c427be484143c.png" alt="raspberry-logo">
-      </div> -->
+      <div class="logo">
+        <img src="https://i.pinimg.com/originals/6e/de/a8/6edea84dffc69d2c190c427be484143c.png" alt="raspberry-logo">
+      </div>
       <nav class="nav-links">
-        <a href="https://google.com">Home</a>
-        <a href="https://facebook.com">Share</a>
-        <a href="https://google.com">Login</a>
+        <a href="#">Home</a>
+        <a href="#">Subscribe</a>
+        <a href="#">Share</a>
+        <a href="#">Log In</a>
       </nav>
     </header>
 
@@ -24,8 +25,10 @@
       <!-- The big news content -->
       <div class="headline-article">
         <img class="headline-image" src="https://www.haifa-group.com/sites/default/files/field/image/Raspberry%20Mobile%20banner.png" alt="raspberry">
-        <h1 class="headline">This is a big deal of newsy stuff!</h1>
-        <p class="headline-text">Here is a bit of article text. Blah blah blah.</p>
+     
+        <h1 class="headline">This is a big deal of newsy stuff! </h1>
+        <p class="headline-text">
+          Here is a bit of article text. Blah blah blah. More and more text. And even more text. I wonder how much filler text I can keep you interested in. Why are you still reading this?</p>
       </div>
     </section>
 
