added HTML structures and image folder with images

--- a/code/index.html
+++ b/code/index.html
@@ -2,21 +2,71 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>Coffee newsite!</title>
     <link rel="stylesheet" href="./style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale= 1.0">
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
+    
     <header>
+
+      <div class="website-header">
+        <img class="logo" src="images/Coffebeansicon.png" alt="Logo">
+        <h1>The World of Coffee!</h1>
+      </div>
+
+    <!--Navigation bar-->
+    <nav class="navbar">
+      <ul>
+       <a href=#>about</a>
+       <a href=#>information</a>
+       <a href="mailto:terese.claesson@gmail.com">email</a>
+       <a href=#>help</a>
+      </ul>
+    </nav>
+      
       <!-- Some kind of logo and navbar -->
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+      <h3>BIG NEWS!</h3>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin dignissim facilisis luctus. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec fringilla, nisi ac tincidunt varius, sem nunc fermentum lectus, non fermentum ligula mauris sed tellus. Praesent at eleifend diam, id facilisis velit. Etiam eu imperdiet mauris. Donec vehicula felis lectus, at consectetur ante bibendum quis. Pellentesque imperdiet sem eros, in convallis velit pharetra vulputate. Praesent volutpat sapien vel bibendum malesuada. Sed sed nibh pretium, aliquam ante eget, finibus diam.
+      </p>
+      <img src="images/coffeecup.jpg" alt="Coffee cup">
     </section>
 
-    <section class="">
+    <section class="the-other-news">
       <!-- The other news  -->
+      <h2>OTHER NEWS!</h2>
+      <img src="images/plockakaffet.jpg" alt="Plockningsprocessen">
+      <p>
+        Sed odio quam, lobortis a ex et, cursus faucibus leo. Vestibulum cursus lacinia tortor, eget commodo felis laoreet non. Mauris ornare est eu tincidunt maximus. Quisque vulputate porta magna a egestas. Aenean scelerisque eros id porttitor pharetra. Vivamus nec nisi vehicula, bibendum metus in, cursus magna. Etiam varius ultrices diam, nec dignissim lacus ullamcorper ac. 
+      </p>
+
+      <div class="Coffee-outdoor">
+        <p>
+          <b>hej på dig min vän!!!!!!!!!</b> 
+          <button type="button" onclick="alert('Coffee is the best')">click me!</button>
+        </p>
+        <ul class="flex-container nowrap">
+           <li><img src="images/utomhuskaffe.jpg" alt="The Coffee on hike"></li>
+           <li><img src="images/what'syourstory.jpg" alt="The Coffee on hike"></li>
+           <li><img src="images/kaffeförpackning.jpg" alt="More Coffee"></li>
+           <li><img src="images/morecoffee.jpg" alt="light coffee picture"></li>
+        </ul>
+  
+      </div>
     </section>
+
   </body>
+  <footer>
+    <div class="footer">
+       <p>
+      Terese Claesson. 
+       </p>
+    </div>
+  </footer>
 </html>
