--- a/code/index.html
+++ b/code/index.html
@@ -16,8 +16,8 @@
   <body>
     <main>
     <header>
-      <img src="mobile-view-logo.png" alt="news site logo" class="logo">
-      <img src="desktop-view-logo.png" alt="news site logo desktop view" class="desktop-view-logo">
+      <img src="news-site-logo.svg" alt="news site logo" class="logo">
+      <img src="desktop-view-logo.svg" alt="news site logo desktop view" class="desktop-view-logo">
       <h1>BKK News</h1>
         <nav> 
           <ul>
@@ -37,14 +37,9 @@
          <p>Thailand has canceled their Test & Go program meaning all visitors need to enter the Kindom via Phuket Sandbox or complete the mandatory quarantine of 7 days for fully vaccinated tourists.
           Luckily, Thailand has decided to open more destinations for their sandbox program. One of them includes the beautiful paradise island "Koh Samui". 
         <a href="#">Read more</a></p> 
-      </div>    
+      </div>
     </section>
-        <div class="social-icons">
-          <a href="#"><img src="facebook-icon.svg" alt="facebook" ></a>
-          <a href="#"><img src="instagram-icon.svg" alt="instagram"></a>
-          <a href="#"><img src="twitter-icon.svg" alt="twitter"></a>
-          <a href="#"><img src="email-icon.svg" alt="email"></a>
-        </div>
+
 
   <!-- The other news  -->
   <section class="other-news">
