added html and css-files

--- a/code/index.html
+++ b/code/index.html
@@ -2,15 +2,27 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
-
+     <!-- Some kind of logo and navbar -->
+    <nav class="navbar">
+      <a href="#" class="toggle-button">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </a>
+      <div class="navbar-links">
+        <ul>
+        <li><a href="https://www.icon.com">About</a></li>
+        <li><a href="https://www.icon.com">Archive</a></li>
+        <li><a href="https://www.icon.com">Gallery</a></li>
+        </ul>
+      </div> 
+    </nav>
     <section class="big-news">
       <!-- The big news content -->
     </section>
