add header and adjust layout in news-feed

--- a/code/index.html
+++ b/code/index.html
@@ -47,7 +47,9 @@
       </section>
       
       <section class="news-feed">
+        <h2>Latest news..</h2>
         <!-- The other news content -->
+      <div class="news-feed--cards"> 
         <div class="news-feed--card">
             <img class="news-feed--img" src="./images/cat.jpg" alt="cat with green background"/>
             <span class="date-item">20 JAN, 2022</span>
@@ -75,6 +77,7 @@
             <h3>NAP event - knitting</h3>
             <p>National Association of Pensioners (NAP) is having their monthly knitting gathering next week. Call Ali on 3rd floor or Gun on 2nd floor if you want to join.</p>
         </div>
+      </div>  
       </section>
     </main>
 
